--- a/VisibleConfusion/MVVM/View/Task2View.xaml
+++ b/VisibleConfusion/MVVM/View/Task2View.xaml
@@ -119,60 +119,17 @@
                 <RowDefinition Height="auto" />
                 <RowDefinition Height="auto" />
                 <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition />
                 <ColumnDefinition />
                 <ColumnDefinition />
             </Grid.ColumnDefinitions>
-            <Grid Grid.Row="0">
-                <Grid.RowDefinitions>
-                    <RowDefinition />
-                    <RowDefinition />
-                </Grid.RowDefinitions>
-                <Button Grid.Row="0"
-                        Width="32">
-                    <Control Style="{StaticResource LeftArrow}"
-                             RenderTransformOrigin="1,1"
-                             Height="20"
-                             Width="20">
-                    </Control>
-                </Button>
-                <Button Grid.Row="1"
-                        Width="32">
-                    <Control Style="{StaticResource RightArrow}"
-                             RenderTransformOrigin="1,1"
-                             Height="20"
-                             Width="20">
-                    </Control>
-                </Button>
-            </Grid>
-            <Image Grid.Column="1"
-                   Width="100"
-                   Height="76"></Image>
-            <Grid Grid.Row="0"
-                  Grid.Column="2">
-                <Grid.RowDefinitions>
-                    <RowDefinition />
-                    <RowDefinition />
-                </Grid.RowDefinitions>
-                <Button Grid.Row="0"
-                        Width="32">
-                    <Control Style="{StaticResource RightArrow}"
-                             RenderTransformOrigin="1,1"
-                             Height="20"
-                             Width="20">
-                    </Control>
-                </Button>
-                <Button Grid.Row="1"
-                        Width="32">
-                    <Control Style="{StaticResource LeftArrow}"
-                             RenderTransformOrigin="1,1"
-                             Height="20"
-                             Width="20">
-                    </Control>
-                </Button>
-            </Grid>
+            <TextBlock Foreground="{StaticResource TextColor_1}"
+                       Grid.ColumnSpan="3"
+                       Margin="5">Bufory obrazu:</TextBlock>
             <Grid Grid.Row="1">
                 <Grid.RowDefinitions>
                     <RowDefinition />
@@ -195,8 +152,7 @@
                     </Control>
                 </Button>
             </Grid>
-            <Image Grid.Column="1"
-                   Grid.Row="1"
+            <Image Grid.Column="1" Grid.Row="1"
                    Width="100"
                    Height="76"></Image>
             <Grid Grid.Row="1"
@@ -271,7 +227,56 @@
                     </Control>
                 </Button>
             </Grid>
+            <Grid Grid.Row="3">
+                <Grid.RowDefinitions>
+                    <RowDefinition />
+                    <RowDefinition />
+                </Grid.RowDefinitions>
+                <Button Grid.Row="0"
+                        Width="32">
+                    <Control Style="{StaticResource LeftArrow}"
+                             RenderTransformOrigin="1,1"
+                             Height="20"
+                             Width="20">
+                    </Control>
+                </Button>
+                <Button Grid.Row="1"
+                        Width="32">
+                    <Control Style="{StaticResource RightArrow}"
+                             RenderTransformOrigin="1,1"
+                             Height="20"
+                             Width="20">
+                    </Control>
+                </Button>
+            </Grid>
+            <Image Grid.Column="1"
+                   Grid.Row="3"
+                   Width="100"
+                   Height="76"></Image>
             <Grid Grid.Row="3"
+                  Grid.Column="2">
+                <Grid.RowDefinitions>
+                    <RowDefinition />
+                    <RowDefinition />
+                </Grid.RowDefinitions>
+                <Button Grid.Row="0"
+                        Width="32">
+                    <Control Style="{StaticResource RightArrow}"
+                             RenderTransformOrigin="1,1"
+                             Height="20"
+                             Width="20">
+                    </Control>
+                </Button>
+                <Button Grid.Row="1"
+                        Width="32">
+                    <Control Style="{StaticResource LeftArrow}"
+                             RenderTransformOrigin="1,1"
+                             Height="20"
+                             Width="20">
+                    </Control>
+                </Button>
+            </Grid>
+            <Grid Grid.Row="4"
                   Grid.ColumnSpan="3"
                   HorizontalAlignment="Center">
                 <Grid.ColumnDefinitions>
@@ -289,7 +294,7 @@
                               HorizontalAlignment="Center"
                               Grid.Column="2">XOR</RadioButton>
             </Grid>
-            <Button Grid.Row="4"
+            <Button Grid.Row="5"
                     Width="200"
                     Grid.ColumnSpan="3">
                 buf3 = buf1 &lt;oper> buf2
@@ -391,14 +396,22 @@
               Grid.ColumnSpan="3">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="Auto" />
             </Grid.ColumnDefinitions>
-            <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+            <TextBlock Foreground="{StaticResource TextColor_1}"
+                       Margin="5">Filtracja:</TextBlock>
+            <Grid Grid.Row="1">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition />
                     <ColumnDefinition />
                     <ColumnDefinition />
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
+                    <RowDefinition />
                     <RowDefinition />
                     <RowDefinition />
                     <RowDefinition />
@@ -421,7 +434,16 @@
                                     Grid.Row="1"></xctk:IntegerUpDown>
                 <xctk:IntegerUpDown Grid.Column="2"
                                     Grid.Row="2"></xctk:IntegerUpDown>
+                <Button Width="125" Grid.Row="3" Grid.ColumnSpan="2">Filtruj</Button>
+                <CheckBox Grid.Row="3" Grid.Column="3">Dodaj</CheckBox>
             </Grid>
+            <WrapPanel Grid.Row="1" Grid.Column="1" MaxWidth="300" HorizontalAlignment="Center" VerticalAlignment="Center">
+                <Button Width="125">Dolnoprzepustowy</Button>
+                <Button Width="125">Górnoprzepustowy</Button>
+                <Button Width="125">Dylatacja</Button>
+                <Button Width="125">Erozja</Button>
+                <Button Width="125">Progowanie</Button>
+            </WrapPanel>
         </Grid>
 
     </Grid>
