Task1View Fixes, Radio Button Enhancement

--- a/VisibleConfusion/MVVM/View/Task1View.xaml
+++ b/VisibleConfusion/MVVM/View/Task1View.xaml
@@ -89,19 +89,39 @@
                            Margin="5"
                            Foreground="{StaticResource TextColor_1}">Transformacje:</TextBlock>
                 <Grid  Grid.Row="1">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition />
-                        <ColumnDefinition />
-                        <ColumnDefinition />
-                    </Grid.ColumnDefinitions>
-                    <Button Grid.Column="0"
-                            VerticalAlignment="Top">LUT</Button>
-                    <Image Width="128"
-                           Height="128"
-						Source="{Binding LookUpTableBitmap}"
-                           Stretch="Fill"
-						Grid.Column="1"></Image>
-                    <Button Grid.Column="2"
+
+                    <Grid.RowDefinitions>
+                        <RowDefinition />
+                        <RowDefinition />
+                    </Grid.RowDefinitions>
+
+                    <Border Grid.Row="0"
+                            BorderThickness="2"
+                            Width="Auto"
+                            Height="Auto"
+                            BorderBrush="{StaticResource ForegroundColor}"
+                            CornerRadius="2"
+                            Margin="4"
+                            HorizontalAlignment="Center"
+                            VerticalAlignment="Center"
+                            Effect="{StaticResource dropShadow}">
+                        <Grid>
+                            <Border Name="mask"
+                                    Background="{StaticResource ForegroundColor}"
+                                    CornerRadius="1" />
+                            <DockPanel>
+                                <DockPanel.OpacityMask>
+                                    <VisualBrush Visual="{Binding ElementName=mask}" />
+                                </DockPanel.OpacityMask>
+                                <Image Width="128"
+                                       Height="128"
+                                       Source="{Binding LookUpTableBitmap}"
+                                       Stretch="Fill"></Image>
+
+                            </DockPanel>
+                        </Grid>
+                    </Border>
+                    <Button Grid.Column="0" Grid.Row="1"
                             VerticalAlignment="Top">P2=T(P1)</Button>
                 </Grid>
                 <RadioButton Grid.Row="2"
@@ -200,7 +220,7 @@
                 </Grid>
             </Grid>
             <Grid Grid.Row="1"
-                  Margin="8">
+                  Margin="4">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="auto" />
                     <RowDefinition Height="auto" />
