--- a/VisibleConfusion/MainWindowView.xaml
+++ b/VisibleConfusion/MainWindowView.xaml
@@ -7,7 +7,7 @@
         xmlns:viewModel="clr-namespace:VisibleConfusion.MVVM.ViewModel"
         mc:Ignorable="d"
         Title="MainWindowView"
-        Height="580"
+        Height="600"
         MinWidth="900"
         MinHeight="100"
         Width="1000"
@@ -28,7 +28,7 @@
             <RowDefinition Height="auto" />
             <RowDefinition />
         </Grid.RowDefinitions>
-       <!--<local:TitleBar />-->
+        <!--<local:TitleBar />-->
         <DockPanel>
             <WrapPanel DockPanel.Dock="Top"
                        Margin="1" />
@@ -40,7 +40,8 @@
                     <ColumnDefinition Width="Auto" />
                     <ColumnDefinition Width="Auto" />
                 </Grid.ColumnDefinitions>
-                <Control Margin="8,0" Style="{StaticResource AppIcon}"
+                <Control Margin="8,0"
+                         Style="{StaticResource AppIcon}"
                          RenderTransformOrigin="1,1"
                          Height="20"
                          Width="20">
@@ -125,15 +126,18 @@
                              DockPanel.Dock="Bottom"
                              GroupName="View"
                              Command="{Binding OpenInformationCommand}"
-							 IsChecked="True"
+                             IsChecked="True"
                              Content="i" />
             </DockPanel>
             <!--<local:Task1
 				Grid.Column="1" />-->
-            <ContentControl Grid.Column="1"
-                            Margin="0"
-                            BorderThickness="0"
-                            Content="{Binding CurrentView}" />
+            <Border Grid.Column="1"
+                    Margin="5,5,-5,-5"
+                    Background="{StaticResource BackgroundColor}"
+                    CornerRadius="10,0,0,0"
+                    Padding="16">
+                <ContentControl Content="{Binding CurrentView}" />
+            </Border>
         </Grid>
     </Grid>
     <Window.Resources>
