--- a/VisibleConfusion/MVVM/View/PictureView.xaml
+++ b/VisibleConfusion/MVVM/View/PictureView.xaml
@@ -23,41 +23,36 @@
                     <RowDefinition />
                     <RowDefinition />
                 </Grid.RowDefinitions>
-                <Grid Grid.Row="0">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="auto"/>
-                        <ColumnDefinition Width="auto"/>
-                        <ColumnDefinition Width="auto"/>
-                    </Grid.ColumnDefinitions>
-                    <Button Grid.Column="0"
-                            Command="{Binding DrawByHandCommand}">
-                        Rysuj
-                    </Button>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="auto" />
+                    <ColumnDefinition Width="auto" />
+                    <ColumnDefinition Width="auto" />
+                </Grid.ColumnDefinitions>
+                <Button Grid.Column="0"
+                        Command="{Binding DrawByHandCommand}">
+                    Rysuj
+                </Button>
 
-                    <Button Grid.Column="1"
-                            Command="{Binding FromFileCommand}">
-                        Z pliku
-                    </Button>
+                <Button Grid.Column="1"
+                        Command="{Binding FromFileCommand}">
+                    Z pliku
+                </Button>
 
-                    <Button Grid.Column="2"
-                            IsEnabled="{Binding CameraButtonEnabled}"
-                            Command="{Binding FromCameraCommand}">
-                        Kamera
-                    </Button>
-                </Grid>
-                <Grid Grid.Row="1">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition />
-                        <ColumnDefinition />
-                    </Grid.ColumnDefinitions>
-                    <Button Grid.Column="0"
-                            Command="{Binding CleanCommand}">
-                        Czyść
-                    </Button>
-                    <Button Grid.Column="1">Prosty film</Button>
-                </Grid>
+                <Button Grid.Column="2"
+                        IsEnabled="{Binding CameraButtonEnabled}"
+                        Command="{Binding FromCameraCommand}">
+                    Kamera
+                </Button>
+                <Button Grid.Column="0"
+                        Grid.Row="1"
+                        Command="{Binding CleanCommand}">
+                    Czyść
+                </Button>
+                <Button Grid.Column="1"
+                        Grid.Row="1">Prosty film</Button>
+                <Button Grid.Column="2"
+                        Grid.Row="1">Zoom In</Button>
             </Grid>
-
         </WrapPanel>
 
         <Grid DockPanel.Dock="Bottom"
