--- a/VisibleConfusion/theme/CheckBox.xaml
+++ b/VisibleConfusion/theme/CheckBox.xaml
@@ -160,6 +160,12 @@
                         </Trigger>
                         <Trigger Property="IsChecked"
                                  Value="true">
+                            <Setter Property="Height"
+                                    TargetName="checkBoxBorder"
+                                    Value="14" />
+                            <Setter Property="Width"
+                                    TargetName="checkBoxBorder"
+                                    Value="14" />
                             <Setter Property="Background"
                                     TargetName="checkBoxBorder"
                                     Value="{StaticResource AccentColor}" />
@@ -171,9 +177,7 @@
                                     Value="0" />
                             <Setter Property="Padding"
                                     TargetName="checkBoxBorder"
-                                    Value="2" />
-                            <Setter Property="Padding"
-                                    Value="3,-0.5,0,0" />
+                                    Value="1.75" />
                             <Setter Property="Opacity"
                                     TargetName="optionMark"
                                     Value="1" />
