--- a/VisibleConfusion/MVVM/View/Task2View.xaml
+++ b/VisibleConfusion/MVVM/View/Task2View.xaml
@@ -20,98 +20,7 @@
             <ColumnDefinition Width="auto" />
             <ColumnDefinition Width="1.5*" />
         </Grid.ColumnDefinitions>
-        <DockPanel>
-            <WrapPanel DockPanel.Dock="Top"
-                       Margin="1"
-                       VerticalAlignment="Center"
-                       HorizontalAlignment="Center">
-                <Grid>
-                    <Grid.RowDefinitions>
-                        <RowDefinition />
-                        <RowDefinition />
-                    </Grid.RowDefinitions>
-                    <Grid Grid.Row="0">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="auto" />
-                            <ColumnDefinition Width="auto" />
-                            <ColumnDefinition Width="auto" />
-                        </Grid.ColumnDefinitions>
-                        <Button Grid.Column="0"
-                                Command="{Binding FromFileCommand}">
-                            Z pliku
-                        </Button>
-
-                        <Button Grid.Column="1"
-                                IsEnabled="{Binding CameraButtonEnabled}"
-                                Command="{Binding FromCameraCommand}">
-                            Kamera
-                        </Button>
-                        <Button Grid.Column="2"
-                                Command="{Binding CleanCommand}">
-                            Czyść
-                        </Button>
-                    </Grid>
-                </Grid>
-
-            </WrapPanel>
-
-            <Grid DockPanel.Dock="Bottom"
-                  HorizontalAlignment="Center">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition />
-                </Grid.RowDefinitions>
-                <Border Grid.Row="1"
-                        BorderThickness="2"
-                        Width="Auto"
-                        Height="Auto"
-                        BorderBrush="{StaticResource ForegroundColor}"
-                        CornerRadius="2"
-                        Margin="4"
-                        HorizontalAlignment="Center"
-                        VerticalAlignment="Center"
-                        Effect="{StaticResource dropShadow}">
-                    <Grid>
-                        <Border Name="mask"
-                                Background="{StaticResource ForegroundColor}"
-                                CornerRadius="1" />
-                        <DockPanel>
-                            <DockPanel.OpacityMask>
-                                <VisualBrush Visual="{Binding ElementName=mask}" />
-                            </DockPanel.OpacityMask>
-                            <Image Source="{Binding PictureBitmap}"
-                                   Stretch="Fill"
-                                   Width="Auto"
-                                   Height="Auto">
-                                <Image.Style>
-                                    <Style TargetType="Image">
-                                        <Setter Property="Cursor"
-                                                Value="Arrow" />
-                                        <Style.Triggers>
-                                            <DataTrigger Binding="{Binding DrawingByHandEnabled}"
-                                                         Value="True">
-                                                <Setter Property="Cursor"
-                                                        Value="Pen" />
-                                            </DataTrigger>
-                                        </Style.Triggers>
-                                    </Style>
-                                </Image.Style>
-                                <behaviors:Interaction.Triggers>
-                                    <behaviors:EventTrigger EventName="MouseLeftButtonDown">
-                                        <behaviors:InvokeCommandAction Command="{Binding OnMouseLeftButtonDownOnPictureCommand}"
-                                                                       PassEventArgsToCommand="True" />
-                                    </behaviors:EventTrigger>
-                                    <behaviors:EventTrigger EventName="MouseMove">
-                                        <behaviors:InvokeCommandAction Command="{Binding OnMouseMoveOnPictureCommand}"
-                                                                       PassEventArgsToCommand="True" />
-                                    </behaviors:EventTrigger>
-                                </behaviors:Interaction.Triggers>
-                            </Image>
-                        </DockPanel>
-                    </Grid>
-                </Border>
-            </Grid>
-        </DockPanel>
+        <local:PictureView Grid.Column="0"/>
         <Grid Grid.Column="1" VerticalAlignment="Center">
             <Grid.RowDefinitions>
                 <RowDefinition Height="auto" />
@@ -300,98 +209,7 @@
                 buf3 = buf1 &lt;oper> buf2
             </Button>
         </Grid>
-        <DockPanel Grid.Column="2">
-            <WrapPanel DockPanel.Dock="Top"
-                       Margin="1"
-                       VerticalAlignment="Center"
-                       HorizontalAlignment="Center">
-                <Grid>
-                    <Grid.RowDefinitions>
-                        <RowDefinition />
-                        <RowDefinition />
-                    </Grid.RowDefinitions>
-                    <Grid Grid.Row="0">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="auto" />
-                            <ColumnDefinition Width="auto" />
-                            <ColumnDefinition Width="auto" />
-                        </Grid.ColumnDefinitions>
-                        <Button Grid.Column="0"
-                                Command="{Binding FromFileCommand}">
-                            Z pliku
-                        </Button>
-
-                        <Button Grid.Column="1"
-                                IsEnabled="{Binding CameraButtonEnabled}"
-                                Command="{Binding FromCameraCommand}">
-                            Kamera
-                        </Button>
-                        <Button Grid.Column="2"
-                                Command="{Binding CleanCommand}">
-                            Czyść
-                        </Button>
-                    </Grid>
-                </Grid>
-
-            </WrapPanel>
-
-            <Grid DockPanel.Dock="Bottom"
-                  HorizontalAlignment="Center">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition />
-                </Grid.RowDefinitions>
-                <Border Grid.Row="1"
-                        BorderThickness="2"
-                        Width="Auto"
-                        Height="Auto"
-                        BorderBrush="{StaticResource ForegroundColor}"
-                        CornerRadius="2"
-                        Margin="4"
-                        HorizontalAlignment="Center"
-                        VerticalAlignment="Center"
-                        Effect="{StaticResource dropShadow}">
-                    <Grid>
-                        <Border Name="mask2"
-                                Background="{StaticResource ForegroundColor}"
-                                CornerRadius="1" />
-                        <DockPanel>
-                            <DockPanel.OpacityMask>
-                                <VisualBrush Visual="{Binding ElementName=mask2}" />
-                            </DockPanel.OpacityMask>
-                            <Image Source="{Binding PictureBitmap}"
-                                   Stretch="Fill"
-                                   Width="Auto"
-                                   Height="Auto">
-                                <Image.Style>
-                                    <Style TargetType="Image">
-                                        <Setter Property="Cursor"
-                                                Value="Arrow" />
-                                        <Style.Triggers>
-                                            <DataTrigger Binding="{Binding DrawingByHandEnabled}"
-                                                         Value="True">
-                                                <Setter Property="Cursor"
-                                                        Value="Pen" />
-                                            </DataTrigger>
-                                        </Style.Triggers>
-                                    </Style>
-                                </Image.Style>
-                                <behaviors:Interaction.Triggers>
-                                    <behaviors:EventTrigger EventName="MouseLeftButtonDown">
-                                        <behaviors:InvokeCommandAction Command="{Binding OnMouseLeftButtonDownOnPictureCommand}"
-                                                                       PassEventArgsToCommand="True" />
-                                    </behaviors:EventTrigger>
-                                    <behaviors:EventTrigger EventName="MouseMove">
-                                        <behaviors:InvokeCommandAction Command="{Binding OnMouseMoveOnPictureCommand}"
-                                                                       PassEventArgsToCommand="True" />
-                                    </behaviors:EventTrigger>
-                                </behaviors:Interaction.Triggers>
-                            </Image>
-                        </DockPanel>
-                    </Grid>
-                </Border>
-            </Grid>
-        </DockPanel>
+        <local:PictureView Grid.Column="2" />
         <Grid Grid.Row="1"
               Grid.ColumnSpan="3">
             <Grid.ColumnDefinitions>
@@ -399,8 +217,8 @@
                 <ColumnDefinition Width="Auto" />
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
             <TextBlock Foreground="{StaticResource TextColor_1}"
                        Margin="5">Filtracja:</TextBlock>
@@ -438,13 +256,16 @@
                         Grid.Row="3"
                         Grid.ColumnSpan="3">Filtruj</Button>
             </Grid>
-            <WrapPanel Grid.Row="1" Grid.Column="1" MaxWidth="300" HorizontalAlignment="Center" VerticalAlignment="Center">
+            <WrapPanel Grid.Row="1"
+                       Grid.Column="1"
+                       MaxWidth="300"
+                       HorizontalAlignment="Center"
+                       VerticalAlignment="Center">
                 <Button Width="125">Dolnoprzepustowy</Button>
                 <Button Width="125">Górnoprzepustowy</Button>
                 <Button Width="125">Dylatacja</Button>
                 <Button Width="125">Erozja</Button>
             </WrapPanel>
         </Grid>
-
     </Grid>
 </UserControl>
