--- a/VisibleConfusion/MVVM/View/Task2View.xaml
+++ b/VisibleConfusion/MVVM/View/Task2View.xaml
@@ -16,6 +16,8 @@
                     Value="169" />
             <Setter Property="Minimum"
                     Value="-169" />
+            <Setter Property="DefaultValue"
+                    Value="0" />
             <Setter Property="Foreground"
                     Value="{StaticResource TextColor_1}" />
             <Setter Property="FontWeight"
