Mono does 'mono'

--- a/VisibleConfusion/MVVM/View/Task1View.xaml
+++ b/VisibleConfusion/MVVM/View/Task1View.xaml
@@ -62,7 +62,8 @@
                              Width="20">
                     </Control>
                 </Button>
-                <Button Grid.Row="5">Mono</Button>
+                <Button Grid.Row="5"
+					Command="{Binding LeftToRightMonoCommand}">Mono</Button>
             </Grid>
 
         </DockPanel>
