Hideo Kojima byłby dumny

--- a/VisibleConfusion/MVVM/View/PictureView.xaml
+++ b/VisibleConfusion/MVVM/View/PictureView.xaml
@@ -13,6 +13,41 @@
     <UserControl.DataContext>
         <viewModel:PictureViewModel />
     </UserControl.DataContext>
+    <UserControl.Resources>
+        <Style x:Key="PictureViewBorderStyle"
+               TargetType="Border">
+            <Setter Property="CornerRadius"
+                    Value="2" />
+            <Setter Property="Grid.Row"
+                    Value="3" />
+            <Setter Property="BorderThickness"
+                    Value="2" />
+            <Setter Property="Width"
+                    Value="Auto" />
+            <Setter Property="Height"
+                    Value="Auto" />
+            <Setter Property="BorderBrush"
+                    Value="{StaticResource ForegroundColor}" />
+            <Setter Property="CornerRadius"
+                    Value="2" />
+            <Setter Property="Margin"
+                    Value="4" />
+            <Setter Property="HorizontalAlignment"
+                    Value="Center" />
+            <Setter Property="VerticalAlignment"
+                    Value="Center" />
+            <Setter Property="Effect"
+                    Value="{StaticResource dropShadow}" />
+            <Style.Triggers>
+                <DataTrigger Binding="{Binding Path=Tag, RelativeSource={RelativeSource AncestorType={x:Type local:Task2View}}}"
+                             Value="HideBorderStyle">
+                    <Setter Property="Visibility"
+                            Value="Collapsed" />
+                </DataTrigger>
+
+            </Style.Triggers>
+        </Style>
+    </UserControl.Resources>
     <DockPanel>
         <WrapPanel DockPanel.Dock="Top"
                    Margin="1"
@@ -54,7 +89,6 @@
                         Grid.Row="1">Zoom In</Button>
             </Grid>
         </WrapPanel>
-
         <Grid DockPanel.Dock="Bottom"
               HorizontalAlignment="Center">
             <Grid.RowDefinitions>
@@ -210,16 +244,7 @@
                     </DockPanel>
                 </Grid>
             </Border>
-            <Border Grid.Row="3"
-                    BorderThickness="2"
-                    Width="Auto"
-                    Height="Auto"
-                    BorderBrush="{StaticResource ForegroundColor}"
-                    CornerRadius="2"
-                    Margin="4"
-                    HorizontalAlignment="Center"
-                    VerticalAlignment="Center"
-                    Effect="{StaticResource dropShadow}">
+            <Border Style="{StaticResource PictureViewBorderStyle}">
                 <Grid>
                     <Border Name="mask2"
                             Background="{StaticResource ForegroundColor}"
@@ -236,3 +261,4 @@
         </Grid>
     </DockPanel>
 </UserControl>
+
