--- a/VisibleConfusion/MVVM/View/Task2View.xaml
+++ b/VisibleConfusion/MVVM/View/Task2View.xaml
@@ -6,9 +6,10 @@
              xmlns:local="clr-namespace:VisibleConfusion.MVVM.View"
              xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
              xmlns:viewModel="clr-namespace:VisibleConfusion.MVVM.ViewModel"
-             xmlns:behaviors="http://schemas.microsoft.com/xaml/behaviors">
+             xmlns:behaviors="http://schemas.microsoft.com/xaml/behaviors"
+             Tag="HideBorderStyle">
     <UserControl.DataContext>
-        <viewModel:PictureViewModel />
+        <viewModel:PictureViewModel/>
     </UserControl.DataContext>
     <UserControl.Resources>
         <Style TargetType="{x:Type xctk:IntegerUpDown}">
@@ -36,7 +37,7 @@
             <ColumnDefinition Width="auto" />
             <ColumnDefinition Width="1.5*" />
         </Grid.ColumnDefinitions>
-        <local:PictureView Grid.Column="0" />
+        <local:PictureView Grid.Column="0"/>
         <Grid Grid.Column="1"
               VerticalAlignment="Center">
             <Grid.RowDefinitions>
@@ -227,7 +228,7 @@
                 buf3 = buf1 &lt;oper> buf2
             </Button>
         </Grid>
-        <local:PictureView Grid.Column="2" />
+        <local:PictureView Grid.Column="2"/>
         <Grid Grid.Row="1"
               Grid.ColumnSpan="3">
             <Grid.ColumnDefinitions>
