--- a/VisibleConfusion/MVVM/View/PictureView.xaml
+++ b/VisibleConfusion/MVVM/View/PictureView.xaml
@@ -83,9 +83,11 @@
                     Czyść
                 </Button>
                 <Button Grid.Column="1"
-                        Grid.Row="1">Prosty film</Button>
+                        Grid.Row="1"
+                        Command="{Binding GetFrameFromCameraCommand}">Prosty film</Button>
                 <Button Grid.Column="2"
-                        Grid.Row="1">Zoom In</Button>
+                        Grid.Row="1"
+                        Command="{Binding FromCameraCommand}">Zoom In</Button>
             </Grid>
         </WrapPanel>
         <Grid DockPanel.Dock="Bottom"
