--- a/VisibleConfusion/MVVM/View/PictureView.xaml
+++ b/VisibleConfusion/MVVM/View/PictureView.xaml
@@ -74,7 +74,7 @@
 
                 <Button Grid.Column="2"
                         IsEnabled="{Binding CameraButtonEnabled}"
-                        Command="{Binding FromCameraCommand}">
+                        Command="{Binding GetFrameFromCameraCommand}">
                     Kamera
                 </Button>
                 <Button Grid.Column="0"
@@ -84,10 +84,10 @@
                 </Button>
                 <Button Grid.Column="1"
                         Grid.Row="1"
-                        Command="{Binding GetFrameFromCameraCommand}">Prosty film</Button>
+                        IsEnabled="{Binding CameraButtonEnabled}"
+                        Command="{Binding FromCameraCommand}">Prosty film</Button>
                 <Button Grid.Column="2"
-                        Grid.Row="1"
-                        Command="{Binding FromCameraCommand}">Zoom In</Button>
+                        Grid.Row="1">Zoom In</Button>
             </Grid>
         </WrapPanel>
         <Grid DockPanel.Dock="Bottom"
