--- a/VisibleConfusion/MVVM/View/PictureView.xaml
+++ b/VisibleConfusion/MVVM/View/PictureView.xaml
@@ -87,7 +87,8 @@
                         IsEnabled="{Binding CameraButtonEnabled}"
                         Command="{Binding FromCameraCommand}">Prosty film</Button>
                 <Button Grid.Column="2"
-                        Grid.Row="1">Zoom In</Button>
+                        Grid.Row="1"
+					Command="{Binding ZoomInCommand}">Zoom In</Button>
             </Grid>
         </WrapPanel>
         <Grid DockPanel.Dock="Bottom"
